--- a/projects/templates/projects/create.html
+++ b/projects/templates/projects/create.html
@@ -2,4 +2,18 @@
 
 {% block body %}
   <h1>Create</h1>
+  <form action="{% url 'projects:create' %}" method="post">
+    {% csrf_token %}
+    {% for field in form %}
+      <p>
+        {{field.label}} <br>
+        {{field}}<br>
+        <small class="text=muted">{{field.help_text}}</small>
+        {% for error in field.errors %}
+          <p style="color: red">{{ error }}</p>
+        {% endfor %}
+      </p>
+    {% endfor %}
+    <input type="submit" value="Submit"></input>
+  </form>
 {% endblock %}
