--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="{% url 'projects:create' %}">Create<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'projects:manage' %}">Manage<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'projects:manage' %}">My Projects<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
