--- a/projects/templates/projects/home.html
+++ b/projects/templates/projects/home.html
@@ -2,10 +2,18 @@
 
 {% block body %}
   <h1>Home</h1>
+  <form action="{% url 'projects:home' %}" method="post">
+    {% csrf_token %}
+    {{form}}
+  </form>
   {% for project in projects %}
     <div class="{{project.status.cardClass.cardClass}}">
       <div class="card-body">
-          {{project.name}}
+          {{project.name}}<br>
+          Tags:
+            {% for tag in project.tags.all %}
+              {{tag}}
+            {% endfor %}
         <a href="{% url 'projects:manage_project' project.id %}" class="float-right btn btn-primary">More</a>
       </div>
     </div>
