--- a/projects/templates/projects/manage.html
+++ b/projects/templates/projects/manage.html
@@ -6,8 +6,11 @@
   {% for project in managed_projects %}
   <div class="{{project.status.cardClass.cardClass}}">
     <div class="card-body">
-        {{project.name}}
-      <a href="{% url 'projects:manage_project' project.id%}" class="float-right btn btn-primary">More</a>
+      <h5 class = "card-title"> {{project.name}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{project.status}}</h6>
+      Description: {{project.description}} <br>
+      Tags: {% for tag in project.tags.all %}{{tag}}{% endfor %}
+      <a href="{% url 'projects:manage_project' project.id%}" class="float-right btn btn-primary">Edit</a>
     </div>
   </div>
   {% endfor %}
@@ -15,7 +18,10 @@
   {% for project in contributed_projects %}
   <div class="{{project.status.cardClass.cardClass}}">
     <div class="card-body">
-        {{project.name}}
+      <h5 class = "card-title"> {{project.name}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{project.status}}</h6>
+      Description: {{project.description}} <br>
+      Tags: {% for tag in project.tags.all %}{{tag}}{% endfor %}
       <a href="{% url 'projects:manage_project' project.id%}" class="float-right btn btn-primary">More</a>
     </div>
   </div>
