Enabled putting in requests

--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -32,6 +32,9 @@
             <a class="nav-link" href="{% url 'projects:manage' %}">MyProjects<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'projects:myrequests' %}">MyRequests</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
           </li>
         </ul>
