--- a/projects/templates/projects/manage.html
+++ b/projects/templates/projects/manage.html
@@ -9,7 +9,7 @@
       <h5 class = "card-title"> {{project.name}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{project.status}}</h6>
       Description: {{project.description}} <br>
-      Tags: {% for tag in project.tags.all %}{{tag}}{% endfor %}
+      Tags: {% for tag in project.tags.all %}#{{tag}} {% endfor %}
       <a href="{% url 'projects:manage_project' project.id%}" class="float-right btn btn-primary">Edit</a>
     </div>
   </div>
@@ -21,7 +21,7 @@
       <h5 class = "card-title"> {{project.name}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{project.status}}</h6>
       Description: {{project.description}} <br>
-      Tags: {% for tag in project.tags.all %}{{tag}}{% endfor %}
+      Tags: {% for tag in project.tags.all %}#{{tag}} {% endfor %}
       <a href="{% url 'projects:manage_project' project.id%}" class="float-right btn btn-primary">More</a>
     </div>
   </div>
