--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,7 +11,9 @@
     {% csrf_token %}
     <input name="username" type="text"/>
     <input name="password" type="password"/>
+    <input type='hidden' name='next' value="{{next}}">
     <input type="submit" value="Login"/>
+
 </form>
 
 
