--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -22,13 +22,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'projects:home' %}">Home<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'projects:create' %}">Create<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'projects:create_tag' %}">Create Tag</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'projects:manage' %}">MyProjects<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
