--- a/projects/templates/projects/project_manager.html
+++ b/projects/templates/projects/project_manager.html
@@ -12,8 +12,12 @@
       {% for error in field.errors %}
         <p style="color: red">{{ error }}</p>
       {% endfor %}
+      {% if field.label == "Tags" %}
+        <a href="{% url 'projects:create_tag'%}" class = "btn btn-success">Create Tag</a>
+      {% endif %}
     </p>
   {% endfor %}
-  <input type="Submit" value = "Submit"></input>
+  <input type="Submit" class = "btn btn-info" value = "Submit"></input>
 </form>
+<button class="btn btn-danger" onclick="history.back()">Cancel</button>
 {% endblock %}
